--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,6 +1,10 @@
+bcrypt==4.1.3
 Flask>=1.1.2
 serverless-wsgi>=2.0.2
 Flask-Migrate==2.1.1
+Flask-Bcrypt==1.0.1
+Flask-JWT-Extended==4.6.0
+Flask-Login==0.6.3
 flask_cors==3.0.10
 Flask-Script==2.0.5
 Flask-RESTful==0.3.10
