--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "set \"REACT_APP_BUILD_ENV=DEV\" && npm run build && aws s3 sync build s3://hackatonilu2 --profile HA",
+    "invalidate-dev": "aws cloudfront create-invalidation --distribution-id E2UFT3EDLREPAG  --paths \"/*\" --profile HA"
   },
   "eslintConfig": {
     "extends": [
